objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Communication_Preference__c</fullName>
        <label>Communication Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instant Message</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Source__c</fullName>
        <label>Contact Source</label>
        <picklist>
            <picklistValues>
                <fullName>TNZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer/TUNZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>text(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPID__c</fullName>
        <label>Delivery Point ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_Licence_Number__c</fullName>
        <label>Driver Licence Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_End_Date__c</fullName>
        <label>Employee End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Start_Date__c</fullName>
        <label>Employee Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Employee Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unverified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facebook_ID__c</fullName>
        <label>Facebook ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gone_No_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gone No Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Antiques &amp; Collectables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinema</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cricket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance / Ballet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equestrian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorsport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rugby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sailing – America’s Cup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skiing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tennis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theatre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tramping</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Point_Date__c</fullName>
        <label>Last Touch Point Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Point_From__c</fullName>
        <label>Last Touch Point From</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapGrid_X__c</fullName>
        <label>MapGrid X</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MapGrid_Y__c</fullName>
        <label>MapGrid Y</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meshblock_Code__c</fullName>
        <label>Meshblock Code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Numeric__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(
SUBSTITUTE( 
SUBSTITUTE( MobilePhone , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Numeric</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Numeric__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(
SUBSTITUTE( 
SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Numeric</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Dealership</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Preferred Dealer)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SOA_Code__c</fullName>
        <label>SOA Code</label>
        <picklist>
            <picklistValues>
                <fullName>VALID-U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VALID-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVALID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGNORE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOA_Reason__c</fullName>
        <label>SOA Reason</label>
        <picklist>
            <picklistValues>
                <fullName>CHG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suppression_Codes__c</fullName>
        <label>Suppression Codes</label>
        <picklist>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Send Promotional Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Opt-Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gone No Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Toyota_PMA_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Toyota PMA Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Dealership</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Twitter_ID__c</fullName>
        <label>Twitter ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Customer_Type__c</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>Toyota_PMA_Dealer__c</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Driver_Licence_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All People</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.ADDRESS2_CITY</field>
            <operation>equals</operation>
            <value>Palmerston North</value>
        </filters>
        <label>Palmy Test</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>